--- a/enter/package.json
+++ b/enter/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
     "install": "^0.13.0",
+    "mdbreact": "^5.1.0",
     "node-sass": "^6.0.1",
     "npm": "^7.23.0",
     "react": "^17.0.2",
